syntax = "proto3";

package api.envoy.config.transport_socket.quic.v2alpha;

import "udpa/annotations/migrate.proto";
import "udpa/annotations/status.proto";
import "validate/validate.proto";
import "envoy/api/v2/auth/tls.proto"

option java_package = "io.envoyproxy.envoy.config.transport_socket.quic.v2alpha";
option java_outer_classname = "QuicTransportProto";
option java_multiple_files = true;
option (udpa.annotations.file_migrate).move_to_package =
    "envoy.extensions.transport_sockets.quic_transport.v3";
option (udpa.annotations.file_status).package_version_status = FROZEN;

// [#protodoc-title: QUIC_TRANSPORT]
// [#extension: envoy.transport_sockets.quic_transport]

// Configuration for QUIC transport socket. This provides Google's QUIC protocol to Envoy.
message QuicDownstreamTransport {
  envoy.api.v2.auth.DownstreamTlsContext downstream_tls_context = 1 [(validate.rules).message = {required: true}];
}

// Configuration for QUIC transport socket. This provides Google's QUIC protocol to Envoy.
message QuicUpstreamTransport {
  envoy.api.v2.auth.UpstreamTlsContext upstream_tls_context = 1 [(validate.rules).message = {required: true}];
}
