syntax = "proto3";

package test.integration.smtp;

message SyncWriteFilterConfig {
}
